<resources>
    <string name="app_name">la Cuisine</string>
    <string name="admin_email">saralilialihania@hotmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="Ingredients">Ingredients</string>





    <string name="action_logout">Logout</string>
    <string name="about_text2">"We Offer Amazing New Ideas For Breakfast , Lunch , Dinner ,Dessert And Drinks To enjoy A lovely Cooking Time With Your Beloved Ones"</string>

    <string name="see_the_catalog_button">See the Catalog!</string>
    <string name="current_cuisines">Current Cuisines</string>
    <string name="recipeName">Recipe Name</string>
    <string name="recipeUrl">Click here for the full recipe!</string>
    <string name="recipeCourse">Course:</string>
    <string name="calories">Calories:</string>
    <string name="Preptime">Preptime:</string>




    <string name="servings">Servings:</string>
    <string name="directions">Directions:</string>
    <string name="recipeImgDesc">Image of finished recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_recipe_search">enter recipe search terms</string>
    <string name="search_edamam_first">Search Recipes</string>
    <string name="search_edamam">Search Recipes!</string>
    <string name="nutritional_info">Nutritional Info:</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Need an account? Sign up here!</string>
    <string name="have_account">Already have an account? Log in here!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add to widget</string>
    <string name="loading">Loading...</string>
    <string name="Firebase">  Authenticating with Firebase...</string>
    <string name="Authenticationsussesful">  Authentication successful</string>
    <string name="Authenticationfailed">  Authentication failed</string>
    <string name="ValidEmailMsg"> Please enter a valid email address</string>
    <string name="nameMsg"> Please enter your name</string>
    <string name="WaringErrorMsg">Please create a password containing at least 6 characters</string>
    <string name="Password_Error"> Passwords do not match</string>

    <string name="Breakfastrecipes"> BreakFast Recipes</string>
    <string name="lunchrecipes"> Lunch Recipes</string>
    <string name="dinnerrecipes"> Dinner Recipes</string>
    <string name="dessertrecipes"> Dessert Recipes</string>
    <string name="drinks_recipes"> Drinks Recipes</string>
<string name="Signup"> Sign up</string>
    <string name="MyRecipes"> My Recipes</string>

    <string name="Feedback">Feedback</string>


    <string name="saverecipe"> Save Recipe</string>



    <string name="UserProfile"> User Profile</string>
    <string name="enterEmail">  Please enter your email</string>
    <string name="BlankPassword">   Password cannot be blank</string>

    <string name="SignWithEmailoncomplete">    signInWithEmail:onComplete:</string>
    <string name="SignWithEmail">signInWithEmail</string>
    <string name="welome">Welcome, </string>
    <string name="recipeaddedtowidget"> Recipe Added To Widget </string>
    <string name="health"> health </string>
    <string name="saved">saved</string>
    <string name="RecipeSaved">Recipe Saved</string>
    <string name="Volleyerror"> something Is Worng in volley</string>

    <string name="datanotavailble">Data Not Availble</string>
    <string name="lacuisineeatgood">la cuisine - eat good</string>

    <string name="Communicate">Communicate</string>
    <string name="MustEnterRecipe">Must Enter A Rceipe</string>

    <string name="error_msg">Error</string>
    <string name="CheckInternet">Please Check Your Internet Connection !</string>
    <string name="cancel_msg">Cancel</string>
    <string name="AuthFailure_Error"> AuthFailureError</string>
    <string name="Server_Error"> Server Error !</string>
    <string name="NetworkError">Network Error !</string>
    <string name="parseError"> Parse  Error !</string>
    <string name="deletedrecipe">Recipe Deleted</string>
    <string name="ShareBody"> Here is the share content body</string>
    <string name="accessibliityname"> Please Write Your Name</string>
    <string name="accessibliityEmail">   Please Enter Your Email</string>
    <string name="accessibliityPassword">   Please Enter A  Password</string>
    <string name="accessibliityrewritePassword"> Please Retype Password</string>
    <string name="accessibliityCreateUserButton"> Press To Create A User</string>
    <string name="accessibliityCreateLogin"> If You Already Have an Account Press To Log in</string>
    <string name="accessibliityChooseRecipe"> Press To Choose Recipe</string>
    <string name="accessibliityShareButton"> Press To Share App</string>
    <string name="accessibliityPressToLogin"> Press To LogIn</string>
    <string name="accessibliitynewaccount"> If you need an account Please Press to get one </string>

    <string name="feedback"> feedback </string>

    <string name="sensfeedback">Sens FeedBack: </string>

    <string name="dear">"Dear... </string>

    <string name="accessibliitySaveRecipe"> Press To Save Your Recipe </string>
    <string name="accessibliityWidget"> Press To Add Recipe To Widget </string>
    <string name="accessibliitynFullRecipe">Press To View Full Recipe </string>

    <string name="WidgetContentDsec">List Sowing Ingridients  </string>

    <string name="WidgetnameDsec">List Sowing recipe name  </string>
    <string name="breakfast">breakfast </string>
    <string name="lunch">lunch </string>
    <string name="dinner">dinner </string>
    <string name="Dessert">Dessert </string>
    <string name="Drinks">Drinks </string>

    <string name="Hintname">Name </string>
    <string name="Create_Account">Create Account </string>
    <string name="confirmpassword">Confirm Password </string>
    <string name="backgroundimage">recipe List Background Image</string>
    <string name="Recipemage">recipe Image</string>
    <string name="UserImage">User Image</string>
    <string name="EdamamImage">Edmam Image Logo</string>

    <string name="Intentextra">Subject Here</string>
    <string name="foodImage">Food Image Logo</string>
    <string name="Shared">Share via</string>
    <string name="type"> text/plain</string>
    <string name="invalidurl">invalid url</string>
    <string name="postfailed">Post failed with error code</string>
    <string name="hits">hits</string>
    <string name="recipe">recipe</string>
    <string name="label">label</string>
    <string name="image">image</string>
    <string name="url">url</string>
    <string name="calories_json">calories</string>
    <string name="totalTime">totalTime</string>
    <string name="yield">yield</string>
    <string name="healthLabels">healthLabels</string>
    <string name="ingredientLines">ingredientLines</string>
    <string name="title">title</string>
    <string name="recipes">recipes</string>
    <string name="position">position</string>
    <string name="Search">Search</string>
    <string name="cuisine">cuisine</string>
    <string name="hinttypeyourrecipe"> type Your Recipe</string>
    <string name="presstogetrecipe">   Press To Get Your Recipe</string>
    <string name="userprofile">  user Profile</string>
    <string name="RecipeServings"> Recipe Servings</string>
    <string name="RecipeTimePreparation">   Recipe Preparation Time"</string>

    <string name="swipetodelete">SwipeTo Delete"</string>
</resources>
