<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/account_settings"
            android:title="@string/UserProfile" />
        <item
            android:id="@+id/nav_my_recipes"
            android:icon="@drawable/format_align_left"
            android:title="@string/MyRecipes" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/alert_octagram"
                android:title="@string/Feedback" />
        </menu>
    </item>

</menu>