<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.attar.lacuisine.ui.RecipeDetailFragment">

    <TextView
        android:id="@+id/recipeNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@+id/textView2"

        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/fragment_textview_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/fragment_textview_width"
        android:layout_height="@dimen/fragment_textview_height"
        android:nextFocusDown="@+id/tvServingsTitle"
        android:text="@string/nutritional_info"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/fragment_secondtextview_size"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvServingsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/tvServingsOutput"
                    android:text="@string/servings"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvServingsOutput"
                    android:layout_width="@dimen/recipefragmenttext_layout_width"
                    android:layout_height="@dimen/recipefragmenttext_layout_height"
                    android:contentDescription="@string/RecipeServings"
                    android:gravity="center"
                    android:nextFocusDown="@+id/tvPreptimeTitle"

                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPreptimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/tvPreptimeOutput"
                    android:text="@string/Preptime"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPreptimeOutput"
                    android:layout_width="@dimen/recipefragmenttext_layout_width"
                    android:layout_height="@dimen/recipefragmenttext_layout_height"
                    android:contentDescription="@string/RecipeTimePreparation"
                    android:gravity="center"
                    android:nextFocusDown="@+id/tvCalsListItem"

                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size"

                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCalsListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/caloriesTextView"
                    android:text="@string/calories"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/caloriesTextView"
                    android:layout_width="@dimen/recipefragmenttext_layout_width"
                    android:layout_height="@dimen/recipefragmenttext_layout_height"
                    android:gravity="center"
                    android:nextFocusDown="@+id/tvCautionsTitle"
android:contentDescription="@string/calories"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCautionsTitle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:nextFocusForward="@+id/tvCautionsOutput"
                    android:text="@string/health"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCautionsOutput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            android:contentDescription="@string/healthLabels"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/fragment_thirdtextview_size" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="@dimen/recipefragmentimage_layout_width"
            android:layout_height="@dimen/recipefragmentimage_layout_height"
            android:background="@drawable/image_border"
            android:contentDescription="@string/Recipemage" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Ingredients"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/fragment_thirdtextview_size"
        android:textStyle="bold" />


    <ListView
        android:id="@+id/lvIngredients"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_view_layout_height"
        android:contentDescription="@string/ingredientLines"
        android:background="@color/colorPrimaryLight"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveRecipeButton"
                android:layout_width="@dimen/fragmentbutton_layout_width"
                android:layout_height="@dimen/fragmentbutton_layout_height"
                android:background="@drawable/buttonpinkbg"

                android:contentDescription="@string/accessibliitySaveRecipe"
                android:nextFocusForward="@+id/WidgetButton"
                android:text="@string/saverecipe"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/recipefragment_textsize" />

            <Button
                android:id="@+id/WidgetButton"
                android:layout_width="@dimen/saveButton_layout_width"
                android:layout_height="@dimen/saveButton_layout_height"
                android:background="@drawable/buttonpinkbg"
                android:contentDescription="@string/accessibliityWidget"
                android:nextFocusDown="@+id/sourceTextView"
                android:text="@string/add_widget"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/recipefragment_textsize" />
        </LinearLayout>

        <TextView
            android:id="@+id/sourceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:contentDescription="@string/accessibliitynFullRecipe"
            android:drawableStart="@drawable/ic_subject_white_24dp"
            android:drawablePadding="@dimen/drawble_padding"
            android:gravity="center_vertical"
            android:nextFocusUp="@+id/WidgetButton"
            android:text="@string/recipeUrl"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/fragment_thirdtextview_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>



