<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorlightpink"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/nav_head_image_View"
        android:layout_height="@dimen/nav_head_image_View_Height"
        android:contentDescription="@string/UserImage"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/ImageView_nav_header_width"
        android:layout_height="@dimen/ImageView_nav_header_height"
        android:contentDescription="@string/EdamamImage"
        app:srcCompat="@drawable/edmamlogo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/ImageView_second_width"
            android:layout_height="@dimen/ImageView_second_height"
            android:contentDescription="@string/foodImage"
            android:paddingTop="@dimen/padding_top"
            app:srcCompat="@drawable/foodlogo" />

        <TextView
            android:layout_width="@dimen/Header_text_view_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/foodImage"
            android:fontFamily="monospace"
            android:paddingTop="@dimen/textview_padding_top"
            android:text="@string/lacuisineeatgood"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic" />

    </LinearLayout>
</LinearLayout>
