<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateAccountActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/Text_Create_account"
        android:text="@string/Create_Account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/Text_Create_Text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:nextFocusForward="@+id/emailEditText"
        android:layout_width="@dimen/Text_Create_EditText_LayoutWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Text_Create_EditText_marginTop"
        android:autofillHints="@string/Hintname"
        android:hint="@string/Hintname"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="@dimen/Text_Create_EditText_padding"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="@dimen/Text_Create_EditText_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
    android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/emailEditText"
        android:nextFocusForward="@+id/emailEditText"
android:autofillHints="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Text_Create_EditText_layoutmargintop"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="@dimen/Text_Create_EditText_padding"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="@dimen/Text_Create_EditText_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
android:autofillHints="@string/password"
        android:layout_width="match_parent"
        android:nextFocusForward="@+id/confirmPasswordEditText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Contentmain_marginstart"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="@dimen/Text_Create_EditText_padding"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="@dimen/Text_Create_EditText_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
android:autofillHints="@string/confirmpassword"
        android:nextFocusForward="@+id/createUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Contentmain_marginstart"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/passwordEditText"
        android:padding="@dimen/Text_Create_EditText_padding"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="@dimen/TextView_View_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


    <Button
        android:id="@+id/createUserButton"
        android:nextFocusForward="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/accessibliityCreateUserButton"
        android:layout_marginTop="@dimen/Contentmain_marginstart"
        android:background="@color/colorAccent"
        android:padding="@dimen/Text_Create_EditText_padding"
        android:text="@string/Signup"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

    <TextView
        android:id="@+id/loginTextView"
        android:nextFocusUp="@+id/createUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/Contentmain_marginstart"
        android:contentDescription="@string/accessibliityCreateLogin"
        android:layout_marginTop="@dimen/Contentmain_marginstart"
        android:text="@string/have_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/ButtonTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createUserButton"
        app:layout_constraintVertical_bias="0.032" />

</android.support.constraint.ConstraintLayout>